Adicionando o corpo no index principal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Cuso de Githu online</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A voluptatem, cum suscipit explicabo ipsam, modi magni ex temporibus iure iusto beatae, asperiores quis est qui dolorum vitae ratione consequatur in.</p>
 </body>
 </html>
